--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+}
+
 canvas {
     height: 100%;
     object-fit: contain;
@@ -11,7 +17,22 @@ canvas {
     -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
 }
 
-main {
-    width: 100%;
-    height: 100%;
+#canvasContainer {
+    float: left;
+    width: 100vh;
+    height: 100vh;
+}
+
+#uiContainer {
+    float: left;
+    width: calc(100vw - 100vh);
+    height: 100vh;
+}
+
+#uiContainer * {
+    display: block;
+}
+
+p {
+    margin-bottom: 0;
 }
